# scene-core

./: .gitignore  CMakeLists.txt
include/: BVH.hpp  Camera.hpp  Environment.hpp  Light.hpp  Material.hpp  Render.hpp  Scene.hpp  Texture.hpp  Vertex.hpp  scene-core.hpp
src/: Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  test.cpp
src/asset/: Asset.cpp  Asset.hpp  Mesh.cpp  Mesh.hpp  Primitive.hpp  SubMesh.cpp  SubMesh.hpp
src/utils/: Transform.cpp  Transform.hpp
